tests/regression/errors/basic/type_error_24.csd
// Type error test 24
sus number drip = 24
sus text tea = "string_24"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 24:", wrong)
